Adihu : FAQ icon/text alignment fixes for the header of the initial question
git-svn-id: https://10.24.239.14:5511/svn/Engage@1077 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -1127,8 +1127,8 @@ font-style:normal;
 
 .af_panelAccordion_header .af_panelAccordion_undisclosed-icon-style,
 .af_panelAccordion_header .af_panelAccordion_disclosed-icon-style{
-    margin-left:-3px !important;
-    margin-right:-15px !important;
+    margin-left:-1px !important;
+    margin-right:3px !important;
 }
 
 .af_panelAccordion_header .af_panelAccordion_header-start, .af_panelAccordion_header .af_panelAccordion_header-toolbar, .af_panelAccordion_header .af_panelAccordion_header-title, .af_panelAccordion_header .af_panelAccordion_header-end{
